cmake_minimum_required(VERSION 3.7)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES
        LeetCode/ContainerWithMostWater.h
        LeetCode/DivideTwoIntegers.h
        LeetCode/FindMedianSortedArrays.h
        LeetCode/FourSum.h
        LeetCode/GenerateParentheses.h
        LeetCode/ImplementStrStr.h
        LeetCode/IntegerToRoman.h
        LeetCode/IsPalindrome.h
        LeetCode/LetterCombinations.h
        LeetCode/LongestCommonPrefix.h
        LeetCode/LongestPalindrome.h
        LeetCode/LongestValidParentheses.h
        LeetCode/main.cpp
        LeetCode/MergeKSortedLists.h
        LeetCode/MergeTwoSortedLists.h
        LeetCode/NextPermutation.h
        LeetCode/RegularExpressionMatching.h
        LeetCode/RemoveDuplicates.h
        LeetCode/RemoveElement.h
        LeetCode/RemoveNthNode.h
        LeetCode/ReverseInteger.h
        LeetCode/ReverseNodesInKGroup.h
        LeetCode/RomanToInteger.h
        LeetCode/SearchInRotatedSortedArray.h
        LeetCode/SearchInsertPosition.h
        LeetCode/SearchRange.h
        LeetCode/StringToInt.h
        LeetCode/SubstringWithConcatenationOfAllWords.h
        LeetCode/SwapNodesInPairs.h
        LeetCode/ThreeSum.h
        LeetCode/ThreeSumClosest.h
        LeetCode/ValidParentheses.h
        LeetCode/ValidSudoku.h
        LeetCode/ZigZagConversion.h
        LeetCode/FirstMissingPositive.h
        LeetCode/CountAndSay.h
        LeetCode/SudokuSolver.h
        LeetCode/CombinationSumII.h
        LeetCode/CombinationSum.h
        LeetCode/TrappingRainWater.h
        LeetCode/MultiplyStrings.h
        LeetCode/WildcardMatching.h
        LeetCode/JumpGame2.h
        LeetCode/Permutations.h
        LeetCode/PermutationsTwo.h
        LeetCode/RotateImage.h
        LeetCode/GroupAnagrams.h
        LeetCode/Pow.h
        LeetCode/EncodeAndDecodeTinyURL.h
        LeetCode/MaximumBinaryTree.h
        LeetCode/HammingDistance.h
        LeetCode/JudgeRouteCircle.h
        LeetCode/MergeTwoBinaryTrees.h
        LeetCode/ArrayPartitionOne.h
        LeetCode/ComplexNumberMultiplication.h
        LeetCode/BattleshipsInABoard.h
        LeetCode/CountingBits.h
        LeetCode/NumberComplement.h
        LeetCode/KeyboardRow.h
        LeetCode/ReverseWordsInAStringThree.h
        LeetCode/ReverseString.h
        LeetCode/DistributeCandies.h 
        LeetCode/ReshapeTheMatrix.h
        LeetCode/FizzBuzz.h
        LeetCode/TrimABinarySearchTree.h
        LeetCode/IslandPerimeter.h
        LeetCode/NextGreaterElementOne.h
        LeetCode/AverageOfLevelsInBinaryTree.h
        LeetCode/FindBottomLeftTreeValue.h
        LeetCode/FindAllDuplicatesInAnArray.h
        LeetCode/QueueReconstructionByHeight.h
        LeetCode/SingleElementInASortedArray.h
        LeetCode/LongestUncommonSubsequenceI.h
        LeetCode/NimGame.h
        LeetCode/OptimalDivision.h
        LeetCode/BeautifulArrangement.h
        LeetCode/FindLargestValueInEachTreeRow.h
        LeetCode/BaseballGame.h
        LeetCode/SingleNumber.h
        LeetCode/ArithmeticSlices.h
        LeetCode/EmployeeImportance.h
        LeetCode/MapSumPairs.h
        LeetCode/MaxConsecutiveOnes.h
        LeetCode/MaximumDepthOfBinaryTree.h
        LeetCode/MostFrequentSubtreeSum.h
        LeetCode/InvertBinaryTree.h
        LeetCode/SingleNumberThree.h
        LeetCode/MaxAreaOfIsland.h
        LeetCode/DetectCapital.h
        LeetCode/BinaryNumberWithAlternatingBits.h
        LeetCode/BeautifulArrangementTwo.h
        LeetCode/MinimumMovesToEqualArrayElementsTwo.h
        LeetCode/TeemoAttacking.h)

add_executable(LeetCode ${SOURCE_FILES})
